--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="author" content>
+    <meta name="description" content="An Hello World! example">
+    <meta name="theme-color" content="#2d2c2c">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta content="https:///epsniff/epsniff.github.io" property="og:url">
+    <meta property="og:title" content>
+    <meta property="og:description" content="An Hello World! example">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://">
+    <title></title>
+    <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+    <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
+    <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
+    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
+    <script defer src="/epsniff/epsniff.github.io/app.js"></script>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    <aside id="app-wasm-loader" class="goapp-app-info">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <p id="app-wasm-loader-label" class="goapp-label">0%</p>
+    </aside>
+  </body>
+</html>
