--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta content="An Hello World! example" name="description">
-    <meta content="#2d2c2c" name="theme-color">
+    <meta name="description" content="An Hello World! example">
+    <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io/hello">
@@ -13,18 +13,18 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
-    <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
+    <link href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg" rel="icon">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
-    <link rel="stylesheet" href="/epsniff/epsniff.github.io/app.css" type="text/css">
+    <link type="text/css" rel="stylesheet" href="/epsniff/epsniff.github.io/app.css">
     <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <aside id="app-wasm-loader" class="goapp-app-info">
-      <img alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin">
-      <p id="app-wasm-loader-label" class="goapp-label">0%</p>
+    <h1>Hello World from go-app!</h1>
+    <aside class="goapp-app-info" id="app-wasm-loader">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <p class="goapp-label" id="app-wasm-loader-label">0%</p>
     </aside>
   </body>
 </html>
