--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta content="https:///epsniff/epsniff.github.io" property="og:url">
+    <meta property="og:url" content="https:///epsniff/epsniff.github.io">
     <meta property="og:title" content>
     <meta property="og:description" content="An Hello World! example">
     <meta property="og:type" content="website">
@@ -17,13 +17,13 @@
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
-    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
+    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <aside id="app-wasm-loader" class="goapp-app-info">
-      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+    <h1>Hello World from go-app!</h1>
+    <aside class="goapp-app-info" id="app-wasm-loader">
+      <img class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
