--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta name="description" content="An Hello World! example">
-    <meta name="theme-color" content="#2d2c2c">
+    <meta content="An Hello World! example" name="description">
+    <meta content="#2d2c2c" name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta property="og:url" content="https:///epsniff/epsniff.github.io">
+    <meta content="https:///epsniff/epsniff.github.io" property="og:url">
     <meta property="og:title" content>
     <meta property="og:description" content="An Hello World! example">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://">
+    <meta content="https://" property="og:image">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
@@ -21,9 +21,9 @@
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World from go-app!</h1>
+    <h1>Hello World!</h1>
     <aside class="goapp-app-info" id="app-wasm-loader">
-      <img class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
