--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content>
     <meta name="description" content="An Hello World! example">
-    <meta content="#2d2c2c" name="theme-color">
+    <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io/hello">
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
-    <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
+    <link href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg" rel="icon">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hey AJ, lets talk!</h1>
+    <h1>Hey, lets talk!</h1>
     <aside id="app-wasm-loader" class="goapp-app-info">
       <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
