--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta content="An Hello World! example" name="description">
+    <meta name="description" content="An Hello World! example">
     <meta content="#2d2c2c" name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta content="https:///epsniff/epsniff.github.io" property="og:url">
+    <meta property="og:url" content="https:///epsniff/epsniff.github.io">
     <meta property="og:title" content>
     <meta property="og:description" content="An Hello World! example">
     <meta property="og:type" content="website">
-    <meta content="https://" property="og:image">
+    <meta property="og:image" content="https://">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
-    <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
-    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
+    <link type="text/css" rel="stylesheet" href="/epsniff/epsniff.github.io/app.css">
+    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World 222!</h1>
     <aside class="goapp-app-info" id="app-wasm-loader">
-      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <img src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
