--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="author" content>
     <meta name="description" content="An Hello World! example">
-    <meta content="#2d2c2c" name="theme-color">
+    <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io">
-    <meta property="og:title" content>
-    <meta property="og:description" content="An Hello World! example">
-    <meta property="og:type" content="website">
+    <meta content property="og:title">
+    <meta content="An Hello World! example" property="og:description">
+    <meta content="website" property="og:type">
     <meta property="og:image" content="https://">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
@@ -22,9 +22,9 @@
   </head>
   <body>
     <h1>Hello World 222!</h1>
-    <aside class="goapp-app-info" id="app-wasm-loader">
-      <img src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon">
-      <p id="app-wasm-loader-label" class="goapp-label">0%</p>
+    <aside id="app-wasm-loader" class="goapp-app-info">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <p class="goapp-label" id="app-wasm-loader-label">0%</p>
     </aside>
   </body>
 </html>
