--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io">
-    <meta content property="og:title">
+    <meta property="og:title" content>
     <meta content="An Hello World! example" property="og:description">
-    <meta content="website" property="og:type">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
-    <link type="text/css" rel="stylesheet" href="/epsniff/epsniff.github.io/app.css">
-    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
+    <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
+    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World 222!</h1>
+    <h1>Hello World 333!</h1>
     <aside id="app-wasm-loader" class="goapp-app-info">
       <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
-      <p class="goapp-label" id="app-wasm-loader-label">0%</p>
+      <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
 </html>
