--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta name="description" content="An Hello World! example">
+    <meta name="description" content="Eric Sniff personal website">
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io">
     <meta property="og:title" content>
-    <meta content="An Hello World! example" property="og:description">
+    <meta property="og:description" content="Eric Sniff personal website">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
@@ -21,9 +21,9 @@
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World 333!</h1>
+    <h1>Hello World 42!</h1>
     <aside id="app-wasm-loader" class="goapp-app-info">
-      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <img src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
