--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
-    <h1>Hello World 42!</h1>
+    <div style="background-color:#f0f0f0;padding:20px;text-align:center;">
+      <h1>Go App Test</h1>
+      <p>Welcome to my personal website!</p>
+      <a href="/epsniff/epsniff.github.io/debug">Debug</a>
+    </div>
     <aside id="app-wasm-loader" class="goapp-app-info">
-      <img src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon">
-      <p id="app-wasm-loader-label" class="goapp-label">0%</p>
+      <img alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon" class="goapp-logo goapp-spin">
+      <p class="goapp-label" id="app-wasm-loader-label">0%</p>
     </aside>
   </body>
 </html>
