--- a/debug.html
+++ b/debug.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta name="description" content="Eric Sniff personal website">
+    <meta content="Eric Sniff personal website" name="description">
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,11 +13,11 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
-    <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
+    <link href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg" rel="icon">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
-    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
+    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
@@ -29,7 +29,7 @@
       </p>
     </div>
     <aside id="app-wasm-loader" class="goapp-app-info">
-      <img class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" id="app-wasm-loader-icon">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
   </body>
