--- a/debug.html
+++ b/debug.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta content="Eric Sniff personal website" name="description">
+    <meta name="description" content="Eric Sniff personal website">
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io/debug">
     <meta property="og:title" content>
-    <meta property="og:description" content="Eric Sniff personal website">
-    <meta property="og:type" content="website">
+    <meta content="Eric Sniff personal website" property="og:description">
+    <meta content="website" property="og:type">
     <meta property="og:image" content="https://">
     <title></title>
     <link href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg" rel="icon">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
-    <script src="/epsniff/epsniff.github.io/wasm_exec.js" defer></script>
+    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
   </head>
   <body>
