--- a/index.html
+++ b/index.html
@@ -1,48 +1,35 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="author" content />
-        <meta name="description" content="Eric Sniff personal website" />
-        <meta name="theme-color" content="#2d2c2c" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, viewport-fit=cover"
-        />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta property="og:url" content="https:///epsniff/epsniff.github.io" />
-        <meta property="og:title" content />
-        <meta property="og:description" content="Eric Sniff personal website" />
-        <meta property="og:type" content="website" />
-        <meta property="og:image" content="https://" />
-        <title></title>
-        <link
-            rel="icon"
-            href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg"
-        />
-        <link
-            rel="apple-touch-icon"
-            href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png"
-        />
-        <link
-            rel="manifest"
-            href="/epsniff/epsniff.github.io/manifest.webmanifest"
-        />
-        <link
-            href="/epsniff/epsniff.github.io/app.css"
-            type="text/css"
-            rel="stylesheet"
-        />
-        <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
-        <script defer src="/epsniff/epsniff.github.io/app.js"></script>
-    </head>
-    <body>
-        <div
-            style="background-color: #f0f0f0; padding: 20px; text-align: center"
-        >
-            <h1>Go App Test</h1>
-            <p>Welcome to my personal website!</p>
-            <a href="/epsniff/epsniff.github.io/debug">Debug</a>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta content name="author">
+    <meta name="description" content="Eric Sniff personal website">
+    <meta name="theme-color" content="#2d2c2c">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta property="og:url" content="https:///epsniff/epsniff.github.io">
+    <meta property="og:title" content>
+    <meta property="og:description" content="Eric Sniff personal website">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://">
+    <title></title>
+    <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
+    <link href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png" rel="apple-touch-icon">
+    <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
+    <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
+    <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
+    <script defer src="/epsniff/epsniff.github.io/app.js"></script>
+  </head>
+  <body>
+    <div style="background-color:#f0f0f0;padding:20px;text-align:center;">
+      <h1>Go App Test</h1>
+      <p>Welcome to my personal website!</p>
+      <a href="/epsniff/epsniff.github.io/debug">Debug</a>
+      <a href="/epsniff/epsniff.github.io/line">Line Chart</a>
+    </div>
+    <aside id="app-wasm-loader" class="goapp-app-info">
+      <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
+      <p class="goapp-label" id="app-wasm-loader-label">0%</p>
+    </aside>
+  </body>
 </html>
