--- a/debug.html
+++ b/debug.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta content="https:///epsniff/epsniff.github.io/debug" property="og:url">
+    <meta property="og:url" content="https:///epsniff/epsniff.github.io/debug">
     <meta property="og:title" content>
     <meta property="og:description" content="Eric Sniff personal website">
     <meta property="og:type" content="website">
@@ -19,16 +19,18 @@
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
     <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/themes/westeros.js"></script>
   </head>
   <body>
-    <div data-compo-type style="border:1px solid currentColor;padding:12px 0;">
+    <div style="border:1px solid currentColor;padding:12px 0;" data-compo-type>
       <h1>Component </h1>
       <p>
         Change appearance by implementing: 
         <code style="color:deepskyblue;margin:0 6px;">func (c ) Render() app.UI</code>
       </p>
     </div>
-    <aside class="goapp-app-info" id="app-wasm-loader">
+    <aside id="app-wasm-loader" class="goapp-app-info">
       <img id="app-wasm-loader-icon" class="goapp-logo goapp-spin" alt="wasm loader icon" src="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
       <p id="app-wasm-loader-label" class="goapp-label">0%</p>
     </aside>
