--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta content="yes" name="apple-mobile-web-app-capable">
-    <meta content="https:///epsniff/epsniff.github.io" property="og:url">
+    <meta property="og:url" content="https:///epsniff/epsniff.github.io">
     <meta property="og:title" content>
-    <meta content="Eric Sniff personal website" property="og:description">
+    <meta property="og:description" content="Eric Sniff personal website">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
     <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
-    <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="/epsniff/epsniff.github.io/app.css" type="text/css">
     <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/themes/westeros.js"></script>
   </head>
   <body>
     <div style="background-color:#f0f0f0;padding:20px;text-align:center;">
