--- a/line.html
+++ b/line.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content>
-    <meta content="Eric Sniff personal website" name="description">
+    <meta name="description" content="Eric Sniff personal website">
     <meta name="theme-color" content="#2d2c2c">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta property="og:url" content="https:///epsniff/epsniff.github.io/line">
     <meta property="og:title" content>
-    <meta content="Eric Sniff personal website" property="og:description">
+    <meta property="og:description" content="Eric Sniff personal website">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://">
     <title></title>
     <link rel="icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.svg">
     <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/maxence-charriere/go-app/master/docs/web/icon.png">
-    <link rel="manifest" href="/epsniff/epsniff.github.io/manifest.webmanifest">
+    <link href="/epsniff/epsniff.github.io/manifest.webmanifest" rel="manifest">
     <link href="/epsniff/epsniff.github.io/app.css" type="text/css" rel="stylesheet">
     <script defer src="/epsniff/epsniff.github.io/wasm_exec.js"></script>
     <script defer src="/epsniff/epsniff.github.io/app.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/themes/westeros.js"></script>
   </head>
   <body>
     <div class="item" style="width:900px;height:500px;"></div>
